new sharedlibs project | db-service logic addition | kafka setup in progress for adding metrics